Remove artifact from 1.0.x UI scheme.
